--- a/content/lessons/data_acquisition/data_acquisition.html
+++ b/content/lessons/data_acquisition/data_acquisition.html
@@ -475,7 +475,7 @@ document.write(`
 <ol class="arabic simple">
 <li><p>The UAV should have the ability to be piloted manually while providing a live camera feed.</p></li>
 <li><p>The UAV should be stable in windy conditions and have satellite-assisted positioning. Cheaper units that lack these features are only suitable for indoor flying.</p></li>
-<li><p>The UAV should have a range of at least 500 meters, which is the maximum distance for line of sight flying in most countries. The unit should be capable of achieving this comfortably.</p></li>
+<li><p>The UAV should have a range of at least 500 m, which is the maximum distance for line of sight flying in most countries. The unit should be capable of achieving this comfortably.</p></li>
 <li><p>The camera should be of good quality and have various controls like speed, aperture, etc. The DJI Phantom 4 Pro and Mavic Pro 2 have a 20-megapixel 1-inch sensor that produces excellent results. Good results can also be achieved with slightly smaller sensors like the 12-megapixel sensor on smaller Mavics and older Phantoms.</p></li>
 <li><p>The camera must have a timelapse function (intervalometer) that allows for taking photos at preset intervals (normally 3 to 5 seconds).</p></li>
 <li><p>The camera should be linked to the navigation system so that the UAV’s position is recorded when each photo is taken.</p></li>
