deploy: 902748c6e07ea3aab7782b4fa162e4e78ece5c6e

--- a/content/lessons/bibliography.html
+++ b/content/lessons/bibliography.html
@@ -413,6 +413,9 @@ document.write(`
 <dt class="label" id="id2"><span class="brackets">HCL+21</span></dt>
 <dd><p>John Howell, Magda Chmielewska, Conor Lewis, Simon Buckley, Nicole Naumann, and Jessica Pugsley. Acquisition of data for building photogrammetric virtual outcrop models for the geosciences using remotely piloted vehicles (rpvs). <em>EarthArXiv</em>, 2021.</p>
 </dd>
+<dt class="label" id="id4"><span class="brackets">KD20</span></dt>
+<dd><p>Anna Konert and Tadeusz Dunin. A harmonized european drone market?–new eu rules on unmanned aircraft systems. <em>Adv Sci Technol Eng Syst J</em>, 5:93–99, 2020.</p>
+</dd>
 </dl>
 </div>
 </div>
